--- a/react-staging/package.json
+++ b/react-staging/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "pubsub-js": "^1.9.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
