--- a/react-staging/package.json
+++ b/react-staging/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.29.3",
     "axios": "^1.13.2",
     "pubsub-js": "^1.9.5",
     "react": "17.0.2",
