--- a/react-staging/package.json
+++ b/react-staging/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.29.3",
     "axios": "^1.13.2",
+    "nanoid": "^5.1.6",
     "pubsub-js": "^1.9.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
